  - Support SRT files with missing millisecond part in the timecodes.
* Re-enable the option to bypass the DVD/BD path selection. The user won't be asked to choose
  the location of the DVD/BD player (or folder) when this option is enabled.
* Changed default D3D Fullscreen hotkey to Ctrl+Alt+F
* Disabled Frame Time Correction hotkey by default
* Ticket #1620, UI: Use the new styled radio bullet for menu's items
* Ticket #2878, Removed obsolete MSN Messenger support
* Ticket #2924, Use the current file directory as default folder for the "Load Subtitles" dialog
* Updated FFmpeg (n0.8-19080-g2bac153)
* Updated Little CMS to v2.4 (git 4ba0259)
* Updated Logitech SDK to v3.01 (driver 8.00.100)
* Updated SoundTouch to v1.7.1 r170
* Updated VirtualDub to v1.10.4-test1
* Updated MediaInfoLib to v0.7.62
* Updated ZenLib to v0.4.28 r430
* Updated Basque, Czech, German, Greek, Polish, Russian, Simplified Chinese, Slovak and
  Ukrainian translations
! Various WebUI fixes:
  - Fix seeking
  - Fix volume slider going out of bounds with IE in player.html
  - Fix incorrect encoding of the parent directory's path in browser.html
! MPCVideoDecoder: Fix low merit internal filter
! MPCVideoDecoder: The "Read Aspect Ratio from stream" option didn't always work right
! DVB EPG: Some strings weren't correctly displayed in some cases
! PGS Subtitles: Some subtitles were displayed with wrong colors or even not displayed at all
! EVR-CP renderer: Fix some cases where VSync breaks smooth playback
! Ticket #84, WebServer: The filenames weren't correctly URL decoded
! Ticket #593, Fixed EVR-CP using the CPU while the player is paused when VSync is on
! Ticket #890, DVB: Disable pause for capture mode to avoid accidental playback stop.
! Ticket #1554, The OSD was looking bad when using the EVR Sync renderer
! Ticket #1600, Improve the naming of subtitles tracks (avoid showing a useless and ugly comma)
! Ticket #2396, DVB: Fix default audio track selection when its type is different than