@@ -1249,3 +1249,9 @@ DEFINE_GUID(CLSID_ReClock, 0x9DC15360, 0x914C, 0x46B8, 0xB9, 0xDF, 0xBF, 0xE6, 0
 
 // Morgan's Stream Switcher - {D3CD7858-971A-4838-ACEC-40CA5D529DC8}
 DEFINE_GUID(CLSID_MorganStreamSwitcher, 0xD3CD7858, 0x971A, 0x4838, 0xAC, 0xEC, 0x40, 0xCA, 0x5D, 0x52, 0x9D, 0xC8);
+
+// FFDShow DXVA Decoder - {0B0EFF97-C750-462C-9488-B10E7D87F1A6}
+DEFINE_GUID(CLSID_FFDShowDXVADecoder, 0x0B0EFF97, 0xC750, 0x462C, 0x94, 0x88, 0xB1, 0x0E, 0x7D, 0x87, 0xF1, 0xA6);
+
+// Microsoft DTV-DVD Audio Decoder - {E1F1A0B8-BEEE-490D-BA7C-066C40B5E2B9}
+DEFINE_GUID(CLSID_MSDVTDVDAudioDecoder, 0xE1F1A0B8, 0xBEEE, 0x490D, 0xBA, 0x7C, 0x06, 0x6C, 0x40, 0xB5, 0xE2, 0xB9);
