@@ -36,6 +36,7 @@ Legend:
   the location of the DVD/BD player (or folder) when this option is enabled.
 * Changed default D3D Fullscreen hotkey to Ctrl+Alt+F
 * Disabled Frame Time Correction hotkey by default
+* DVB: Some filters that are known to be incompatible with the BDA source filters are now blacklisted
 * Ticket #1620, UI: Use the new styled radio bullet for menu's items
 * Ticket #2878, Removed obsolete MSN Messenger support
 * Ticket #2924, Use the current file directory as default folder for the "Load Subtitles" dialog
